--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgray;
+  background-color: #ddbea9;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
 }
